# paperinator

./: .gitignore  README.md  pyproject.toml
src/paperinator/: __init__.py  llm_processor.py  main.py  ocr_processor.py  prompts.py
viewer/: README.md  package.json  tailwind.config.js
viewer/src/: JsonViewer.jsx  main.jsx
